# partitioner

./: .clangd  .gitmodules  CMakeLists.txt  README.md  neovim.json
src/: coarsening.cpp  coarsening.h  definition.h  fm_partition.cpp  fm_partition.h  main.cpp  parser_input.cpp  parser_input.h
